# artworks-studio-os

./: .gitignore  .prettierignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  PRINCIPLES.md  README.md  START-HERE.md  WHY.md  electron.vite.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cli.yml  platform.yml
aw/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
aw/docs/: architecture.md  commands.md
aw/src/aw/: __init__.py  app.py  config.py  constants.py  main.py
aw/src/aw/commands/: __init__.py  ai.py  docs.py  doctor.py  git.py  help.py  project.py  studio.py  version.py
aw/src/aw/services/: __init__.py  documentation.py  production.py  studio.py  vcs.py
aw/src/aw/templates/: __init__.py
aw/src/aw/templates/documentation/: camera-bible.md  character-bible.md  editing-notes.md  environment-bible.md  production-bible.md  prop-bible.md  story-bible.md  storyboard.md  vfx-bible.md
aw/src/aw/templates/project/: project.json
aw/src/aw/utils/: __init__.py  console.py  templates.py
aw/tests/: test_cli.py
docs/: api-documentation.md  architecture.md  database.md  design-system.md  philosophy.md  plugin-sdk.md  prd.md  roadmap.md  sdk-reference.md  specification.md  structure.md  ui-ux.md  vision.md
plugins/example-hello/: index.ts  manifest.json
src/main/: index.ts
src/main/app/: menu.ts  window-ipc.ts  window-manager.ts  window-state.test.ts  window-state.ts  window.ts
src/main/core/: command-bus.ts  config.ts  event-bus.ts  index.ts  logger.ts  service-container.ts
src/main/database/: README.md  db.ts  entity-mapper.ts  migrations.ts  migrator.test.ts  migrator.ts
src/main/integrations/: README.md
src/main/plugins/: README.md  (+8 more)
src/preload/: index.ts
src/renderer/: index.html
src/types/: global.d.ts
(+93 files in other folders)
